The sidebar no longer wraps when you zoom in too far

--- a/site/css/game.css
+++ b/site/css/game.css
@@ -8,8 +8,7 @@
 
 #gameSidebar
 {
-	position: relative;
-	float: left;
+	position: absolute;
 	width: 180px;
 	top: 4px;
 	border: solid 1px white;
